# cs225a

./: CMakeLists.txt
hw0/: hw0.cpp  hw0_viz.cpp  plts.xlsx
hw1/: hw1.cpp  redis_plt.py  untitled.py
hw2/: hw2.cpp  redis_plt.py
hw3/: hw3.cpp  redis_plt.py
kuka_starter_code/: 2dof_controller.cpp  CMakeLists.txt  README.md  controller.cpp  kuka_iiwa.urdf  ori_controller.cpp  simulate_optitrack.py  simviz.cpp  world.urdf
project/: CMakeLists.txt  controller_project.cpp  kuka_iiwa.urdf  simviz_project.cpp  simviz_project_slow.cpp
